<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/signup_activity_signup_btn"
                android:backgroundTint="@color/primaryColor"
                app:layout_constraintStart_toStartOf="@+id/checkBox"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <EditText
                android:id="@+id/editTextNumberPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/login_activity_password_fill_bar_text"
                android:inputType="numberPassword"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login_activity_password_textView"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress2"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="204dp"
                android:layout_marginEnd="288dp"
                android:text="@string/signup_activity_fullname_textView"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.357"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="226dp"
                android:layout_height="155dp"
                android:layout_marginStart="92dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="93dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/gamemojo_logo" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/signup_activity_name_fill_bar_text"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/editTextTextEmailAddress2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/login_activity_email_fill_bar_text"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/signup_activity_terms_and_condition_textView"
                app:layout_constraintStart_toStartOf="@+id/editTextNumberPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login_activity_email_textView"
                android:textSize="20sp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@+id/editTextText"
                app:layout_constraintTop_toBottomOf="@+id/editTextText"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>